; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_test_EnumInputProcessorInfo.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msctf/extr_inputprocessor.c_test_EnumInputProcessorInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@g_ipp = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@CLSID_FakeService = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Did not find registered text service\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_EnumInputProcessorInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_EnumInputProcessorInfo() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = load i32, i32* @FALSE, align 4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* @g_ipp, align 4
  %7 = call i32 @ITfInputProcessorProfiles_EnumInputProcessorInfo(i32 %6, i32** %1)
  %8 = call i64 @SUCCEEDED(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %25

10:                                               ; preds = %0
  br label %11

11:                                               ; preds = %21, %10
  %12 = load i32*, i32** %1, align 8
  %13 = call i64 @IEnumGUID_Next(i32* %12, i32 1, i32* %4, i32* %3)
  %14 = load i64, i64* @S_OK, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = call i64 @IsEqualGUID(i32* %4, i32* @CLSID_FakeService)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %16
  %20 = load i32, i32* @TRUE, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %16
  br label %11

22:                                               ; preds = %11
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @IEnumGUID_Release(i32* %23)
  br label %25

25:                                               ; preds = %22, %0
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @ok(i32 %26, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @ITfInputProcessorProfiles_EnumInputProcessorInfo(i32, i32**) #1

declare dso_local i64 @IEnumGUID_Next(i32*, i32, i32*, i32*) #1

declare dso_local i64 @IsEqualGUID(i32*, i32*) #1

declare dso_local i32 @IEnumGUID_Release(i32*) #1

declare dso_local i32 @ok(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
